==> RT-Thread/rt-thread/bsp/wch/arm/libraries/ch32_drivers/drv_timer_ch32f20x.c <==
#include <rtthread.h>
#include <rtdevice.h>
#include <board.h>
#define LOG_TAG "drv.clock_timer"
#include <drv_log.h>

static void ch32f2_clock_timer_init(struct rt_clock_timer_device *device, rt_uint32_t state)
{
    struct clock_timer_device *clock_timer_dev;
    struct rt_clock_timer_info *clock_timer_info;
    rt_uint32_t clk = 0;
    rt_uint16_t prescaler_value = 0;

    TIM_TimeBaseInitTypeDef TIM_TimeBaseInitType;
    NVIC_InitTypeDef NVIC_InitStructure;

    RT_ASSERT(device != RT_NULL);

    clock_timer_dev = (struct clock_timer_device *)device;

    if (state)
    {
        ch32f2_tim_clock_init(clock_timer_dev->periph);

        clock_timer_info = ch32f2_clock_timer_info_config_get(clock_timer_dev->periph);

        clk = ch32f2_tim_clock_get(clock_timer_dev->periph);

        prescaler_value = (rt_uint16_t)(clk / clock_timer_info->minfreq) - 1;

        /*
        * (1 / freq) = (cnt + 1) * (1 / (clk/(prescaler_value + 1) ) )
        */

        TIM_TimeBaseInitType.TIM_Period = clock_timer_info->maxcnt - 1;
        TIM_TimeBaseInitType.TIM_Prescaler = prescaler_value;
        TIM_TimeBaseInitType.TIM_ClockDivision = TIM_CKD_DIV1;
        TIM_TimeBaseInitType.TIM_RepetitionCounter = 0;

        if (clock_timer_info == RT_NULL)
        {
            TIM_TimeBaseInitType.TIM_CounterMode = TIM_CounterMode_Up;
        }
        else
        {
            if (clock_timer_info->cntmode == CLOCK_TIMER_CNTMODE_UP)
            {
                TIM_TimeBaseInitType.TIM_CounterMode = TIM_CounterMode_Up;
            }
            else
            {
                TIM_TimeBaseInitType.TIM_CounterMode = TIM_CounterMode_Down;
            }
        }

        TIM_TimeBaseInit(clock_timer_dev->periph, &TIM_TimeBaseInitType);

        NVIC_InitStructure.NVIC_IRQChannel = clock_timer_dev->irqn;
        NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 2;
        NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
        NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
        NVIC_Init(&NVIC_InitStructure);

        TIM_ITConfig(clock_timer_dev->periph, TIM_IT_Update, ENABLE);
        TIM_ClearITPendingBit(clock_timer_dev->periph, TIM_IT_Update);

        LOG_D("%s init success", clock_timer_dev->name);
    }
}

static rt_err_t ch32f2_clock_timer_start(struct rt_clock_timer_device *device, rt_uint32_t cnt, rt_clock_timer_mode_t mode)
{

    struct clock_timer_device *clock_timer_dev;

    RT_ASSERT(device != RT_NULL);

    clock_timer_dev = (struct clock_timer_device *)device;

    /*
    * (1 / freq) = (cnt + 1) * (1 / (clk/(prescaler_value + 1) ) )
    */

    TIM_SetCounter(clock_timer_dev->periph, 0);
    TIM_SetAutoreload(clock_timer_dev->periph, cnt - 1);

    if (mode == CLOCK_TIMER_MODE_ONESHOT)
    {
        TIM_SelectOnePulseMode(clock_timer_dev->periph, TIM_OPMode_Single);
    }
    else
    {
        TIM_SelectOnePulseMode(clock_timer_dev->periph, TIM_OPMode_Repetitive);
    }

    TIM_Cmd(clock_timer_dev->periph, ENABLE);

    LOG_D("%s start, cnt = %d", clock_timer_dev->name, cnt);

    return RT_EOK;
}

static void ch32f2_clock_timer_stop(struct rt_clock_timer_device *device)
{
    struct clock_timer_device *clock_timer_dev;

    RT_ASSERT(device != RT_NULL);

    clock_timer_dev = (struct clock_timer_device *)device;

    TIM_Cmd(clock_timer_dev->periph, DISABLE);

    TIM_SetCounter(clock_timer_dev->periph, 0);
}

static rt_err_t ch32f2_clock_timer_control(struct rt_clock_timer_device *device, rt_uint32_t cmd, void *arg)
{
    struct clock_timer_device *clock_timer_dev;
    rt_err_t result = RT_EOK;

    RT_ASSERT(device != RT_NULL);

    clock_timer_dev = (struct clock_timer_device *)device;

    switch (cmd)
    {
    case CLOCK_TIMER_CTRL_FREQ_SET:
    {
        rt_uint32_t freq = 0;
        rt_uint32_t clk = 0;
        rt_uint16_t prescaler_value = 0;

        /*
        * (1 / freq) = (cnt + 1) * (1 / (clk/(prescaler_value + 1) ) )
        */
        if (arg != RT_NULL)
        {

            freq = *((rt_uint32_t *)arg);

            clk = ch32f2_tim_clock_get(clock_timer_dev->periph);

            prescaler_value = (rt_uint16_t)(clk / freq) - 1;

            TIM_PrescalerConfig(clock_timer_dev->periph, prescaler_value, TIM_PSCReloadMode_Immediate);
        }
        else
        {
            result = -RT_EINVAL;
        }
    }
    break;

    default:
        result = -RT_ENOSYS;
        break;
    }

    return result;
}

void TIM1_UP_IRQHandler(void)
{
    /* enter interrupt */
    rt_interrupt_enter();

    if (TIM_GetITStatus(clock_timer_device1.periph, TIM_IT_Update) == SET)
    {
        TIM_ClearITPendingBit(clock_timer_device1.periph, TIM_IT_Update);
        rt_clock_timer_isr(&clock_timer_device1.parent);
    }
    /* leave interrupt */
    rt_interrupt_leave();
}

void TIM2_IRQHandler(void)
{
    /* enter interrupt */
    rt_interrupt_enter();

    if (TIM_GetITStatus(clock_timer_device2.periph, TIM_IT_Update) == SET)
    {
        TIM_ClearITPendingBit(clock_timer_device2.periph, TIM_IT_Update);
        rt_clock_timer_isr(&clock_timer_device2.parent);
    }
    /* leave interrupt */
    rt_interrupt_leave();
}

void TIM3_IRQHandler(void)
{
    /* enter interrupt */
    rt_interrupt_enter();

    if (TIM_GetITStatus(clock_timer_device3.periph, TIM_IT_Update) == SET)
    {
        TIM_ClearITPendingBit(clock_timer_device3.periph, TIM_IT_Update);
        rt_clock_timer_isr(&clock_timer_device3.parent);
    }
    /* leave interrupt */
    rt_interrupt_leave();
}

void TIM4_IRQHandler(void)
{
    /* enter interrupt */
    rt_interrupt_enter();

    if (TIM_GetITStatus(clock_timer_device4.periph, TIM_IT_Update) == SET)
    {
        TIM_ClearITPendingBit(clock_timer_device4.periph, TIM_IT_Update);
        rt_clock_timer_isr(&clock_timer_device4.parent);
    }
    /* leave interrupt */
    rt_interrupt_leave();
}

void TIM5_IRQHandler(void)
{
    /* enter interrupt */
    rt_interrupt_enter();

    if (TIM_GetITStatus(clock_timer_device5.periph, TIM_IT_Update) == SET)
    {
        TIM_ClearITPendingBit(clock_timer_device5.periph, TIM_IT_Update);
        rt_clock_timer_isr(&clock_timer_device5.parent);
    }
    /* leave interrupt */
    rt_interrupt_leave();
}

void TIM6_IRQHandler(void)
{
    /* enter interrupt */
    rt_interrupt_enter();

    if (TIM_GetITStatus(clock_timer_device6.periph, TIM_IT_Update) == SET)
    {
        TIM_ClearITPendingBit(clock_timer_device6.periph, TIM_IT_Update);
        rt_clock_timer_isr(&clock_timer_device6.parent);
    }
    /* leave interrupt */
    rt_interrupt_leave();
}

void TIM7_IRQHandler(void)
{
    /* enter interrupt */
    rt_interrupt_enter();

    if (TIM_GetITStatus(clock_timer_device7.periph, TIM_IT_Update) == SET)
    {
        TIM_ClearITPendingBit(clock_timer_device7.periph, TIM_IT_Update);
        rt_clock_timer_isr(&clock_timer_device7.parent);
    }
    /* leave interrupt */
    rt_interrupt_leave();
}

void TIM8_UP_IRQHandler(void)
{
    /* enter interrupt */
    rt_interrupt_enter();

    if (TIM_GetITStatus(clock_timer_device8.periph, TIM_IT_Update) == SET)
    {
        TIM_ClearITPendingBit(clock_timer_device8.periph, TIM_IT_Update);
        rt_clock_timer_isr(&clock_timer_device8.parent);
    }
    /* leave interrupt */
    rt_interrupt_leave();
}
